Fix low contrast selected tag icon

--- a/example/src/styles.css
+++ b/example/src/styles.css
@@ -74,10 +74,6 @@
   font-size: 0.875rem;
 }
 
-.react-tags__tag:not(:hover)::after {
-  color: #7c7d86;
-}
-
 .react-tags__combobox {
   /* match tag vertical layout */
   padding: 0.375rem 0;
